--- a/assets/locale/locale_en-GB.json
+++ b/assets/locale/locale_en-GB.json
@@ -2,7 +2,7 @@
   "iconAltText": "Web chat icon",
   "hideChat": "Hide",
   "noAvailableAgents": "No Advisors are currently available",
-  "contactCenterClosed": "The Contact Center is closed",
+  "contactCenterClosed": "We are sorry, the Contact Center is closed",
   "connectionLost": "Connection lost",
   "connected": "Connected",
   "failedToSendRequest": "Something failed while sending the request",
@@ -48,11 +48,17 @@
     "agentIsTyping": "Advisor is typing...",
     "conversationEnded": "The chat session has ended but you can start a new one if you need more help",
     "startNewSession": "Start new session",
+    "offerSurvey": "Send me a feedback survey",
     "endChat": "End chat",
     "prompt": {
       "message": "If you leave the chat you will lose your place in the queue. Are you sure?",
       "yes": "Yes",
       "no": "No"
     }
-  }
+  },
+  "survey": {
+     "propose": "Would you like to take part in an email survey at the end of your Webchat?",
+       "yes": "Yes",
+       "no": "No"
+      }
 }
